--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,5 @@ dependencies {
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
     compile group: 'com.opencsv', name: 'opencsv', version: '4.3'
     compile "com.google.code.gson:gson:2.2.+"
+    testCompile group: 'io.rest-assured', name: 'rest-assured', version: '4.3.1'
 }
