--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,5 @@ dependencies {
     compile group: 'com.opencsv', name: 'opencsv', version: '4.3'
     compile "com.google.code.gson:gson:2.2.+"
     testCompile group: 'io.rest-assured', name: 'rest-assured', version: '4.3.1'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.21'
 }
